fix validation errors

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="container h-100">
     <div class="row h-100 align-items-start">
-        <div class="col-7 col-md-6 d-flex flex-column justify-content-start">
+        <div class="col-7 col-md-6 d-flex flex-column justify-content-start splash-text-padder">
             <h1 class="splash-text">
                 Welcome to our online store! We make our <strong>100% rapeseed wax candles</strong> with love and care. 
                 Don't forget to visit our Facebook page for the latest updates and exclusive offers. 
