--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,7 +15,7 @@
 <div class="container mb-2">
     <div class="row">
         <div class="col-12 text-center hr-prod-spacer">
-            <h4 class="logo-font sub-header2-font text-md mb-4 pt-3">Shopping Bag</h3>
+            <h4 class="logo-font sub-header2-font text-md mb-4 pt-3">Shopping Bag</h4>
                 <hr>
         </div>
     </div>
@@ -113,7 +113,7 @@
                         </td>
                     </tr>
                 </table>
-            </div class='pb-5'>
+            </div>
             {% else %}
             <p class="lead mb-5">Your bag is empty.</p>
             <a href="{% url 'products' %}" class="rating-button btn rounded-2 text-uppercase">
