--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -206,6 +206,9 @@
 					<span class="text-uppercase">Home</span>
 				</a>
                 {% endif %}
+                <h5>
+                    <a href="{% url 'signup' %}" class="call-to-action-button btn rounded-2 text-uppercase mt-2">Sign up to our newsletter</a>
+                </h5>
 			</div>
 		</div>
     </div>
