--- a/home/templates/home/contact_form_management.html
+++ b/home/templates/home/contact_form_management.html
@@ -10,43 +10,49 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid px-0 text-center">
-    <div class="form-management-container">
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-6 hr-prod-spacer">
-            <hr class="pt-2">
-            <h2 class="logo-font sub-header2-font mb-4">Contact Messages</h2>
-            <h5 class="text-muted pt-2">Customer and Business-to-Business enquiries requiring attention</h5>
-            <hr class="mb-2">
-        </div>
-    </div>
+<div class="container-fluid px-0 text-center justify-content-center">
 
-    <div class="row mb-5">
-        <div class="container-fluid">
-            <div class="card-container cmt-card-container">
-                <!-- Display all messages as cards in a column & row layout -->
-                {% for contact_form in contact_forms %}
-                <div class="card cmt-card">
-                    <div class="card-body cmt-card-body contact-message-card text-left">
-                        <p class="card-text"><strong>First Name:</strong> {{ contact_form.first_name }}</p>
-                        <p class="card-text"><strong>Last Name:</strong> {{ contact_form.last_name }}</p>
-                        <p class="card-text"><strong>Email:</strong> {{ contact_form.email }}</p>
-                        <p class="card-text"><strong>Phone Number:</strong> {{ contact_form.phone_number }}</p>
-                        <p class="card-text"><strong>Comment:</strong></p>
-                        <p class="card-text comment-text">{{ contact_form.comment }}</p>
-                        <p class="card-text"><strong>Created At:</strong> {{ contact_form.created_at }}</p>
-                        {% if request.user.is_superuser %}
-                        <form method="POST" action="{% url 'delete_message' message_id=contact_form.form_id %}">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-danger">Delete</button>
-                        </form>
-                        {% endif %}
-                    </div>
-                </div>
-                {% endfor %}
+    <div class="form-management-container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 hr-prod-spacer">
+                <hr class="pt-2">
+                <h2 class="logo-font sub-header2-font mb-4">Contact Messages</h2>
+                <h5 class="text-muted pt-2">Customer and Business-to-Business enquiries requiring attention</h5>
+                {% with new_messages_count=messages|length %}
+                <p>
+                    {% if new_messages_count > 0 %}You have  ({{ new_messages_count }}) Message(s) requiring attention.{% else %}You have no new Messages{% endif %}
+                </p>
+                {% endwith %}
+                <hr class="mb-2">
             </div>
         </div>
-    </div>
+
+        <div class="row mb-5">
+            <div class="container-fluid">
+                <div class="card-container cmt-card-container">
+                    <!-- Display all messages as cards in a column & row layout -->
+                    {% for contact_form in contact_forms %}
+                    <div class="card cmt-card">
+                        <div class="card-body cmt-card-body contact-message-card text-left">
+                            <p class="card-text"><strong>First Name:</strong> {{ contact_form.first_name }}</p>
+                            <p class="card-text"><strong>Last Name:</strong> {{ contact_form.last_name }}</p>
+                            <p class="card-text"><strong>Email:</strong> {{ contact_form.email }}</p>
+                            <p class="card-text"><strong>Phone Number:</strong> {{ contact_form.phone_number }}</p>
+                            <p class="card-text"><strong>Comment:</strong></p>
+                            <p class="card-text comment-text">{{ contact_form.comment }}</p>
+                            <p class="card-text"><strong>Created At:</strong> {{ contact_form.created_at }}</p>
+                            {% if request.user.is_superuser %}
+                            <form method="POST" action="{% url 'delete_message' message_id=contact_form.form_id %}">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
+                            {% endif %}
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
