--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
             </h1>
             <div class="my-5">
                 <h5>
-                    <a href="{% url 'category_products' category_id=1 %}" class="call-to-action-button btn rounded-2 text-uppercase"><strong>Discover our candles...</strong></a>
+                    <a href="{% url 'category_products' category_id=1 %}" class="call-to-action-button btn rounded-2 text-uppercase">Discover our candles...</a>
                 </h5>
                 <h5>
                     <a href="{% url 'signup' %}" class="call-to-action-button btn rounded-2 text-uppercase mt-2">Sign up to our newsletter</a>
