readme testing validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Jeffrey Bull">
   <meta name="description" content="Bull & Sea - Handmade candles and lifestyle products">
-  <meta name="keywords" content="handmade candles, environmentally friendly candles, rapeseed wax candles, organic scent candles, 
-    high quality candles, cruelty-free candles, eco-friendly candles, natural candles, sustainable candles, artisan candles, 
-    non-toxic candles, vegan candles, clean-burning candles, ethical candles, small batch candles, home fragrance, hand-poured candles, 
-    sustainable home decor, natural wax candles, aromatherapy candles, slow-burning candles, eco-conscious candles, conscious living, 
+  <meta name="keywords" content="handmade candles, purchase handmade candles, gift candles, environmentally friendly candles, rapeseed wax candles, organic scent candles, 
+    high quality candles, cruelty-free candles, eco-friendly candles, natural candles, sustainable candles, artisan candles, handmade candles Ireland, non-toxic candles, 
+    vegan candles, clean-burning candles, ethical candles, small batch candles, home fragrance, hand-poured candles, Handmade soy wax candles for conscious living, 
+    natural wax candles, aromatherapy candles, slow-burning candles, eco-conscious candles, conscious living, High-quality rapeseed wax candles for eco-conscious consumers, 
     green candles, non-GMO candles, chemical-free candles, renewable materials, conscious consumerism, ethical home goods, sustainable gifts, 
-    natural home fragrance, zero-waste candles, sustainable packaging">
+    natural home fragrance, zero-waste candles, sustainable packaging, Zero-waste candles as sustainable gifts">
   {% endblock %}
 
   {% block extra_meta %}
