fix validation error on contact page

--- a/home/templates/home/contact_form.html
+++ b/home/templates/home/contact_form.html
@@ -24,7 +24,7 @@
     <div class="row justify-content-center align-items-center">
         <div class="col-12 col-lg-7 px-0">
             <!-- Form to handle contact message submission -->
-            <form method="post" action="" class="contact-form-width-control">
+            <form method="post" class="contact-form-width-control">
                 {% csrf_token %}
 
                 <div class="form-group">
